<resources>
    <string name="app_name">الصيام المتقطع</string>
    <string name="_16hour">صيام 16 ساعه</string>
    <string name="from"> from :  </string>
    <string name="to"> to : </string>
    <string name="start">أبدء</string>
    <string name="title_activity_info">infoActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">مشروبات اثناء الصيا</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gender">الجنس</string>
    <string name="age">العمر</string>
    <string name="name">الاسم</string>
    <string name="eight">الوزن</string>
    <string name="male">ذكر</string>
    <string name="female">انثى</string>
    <string name="continuee">استمر</string>
    <string name="hieght">الطول</string>
    <string name="level1">ليس مرهقا</string>
    <string name="level2">مرهقا</string>
    <string name="level3">مرهقا جدا</string>
    <string name="askAboudJobStatus">الى اى مدى يكون عملك اليومى مرهق ؟</string>
    <string name="error_in_input">تأكد من ادخال جميع البيانات الخاصه بك</string>
    <string name="status">حاله جسدك والسعرات الواجب الحصول عليها</string>
    <string name="t45es">تبعا لبياناتك فانت تعانى من </string>
    <string name="startStatus">تحتاج تناول اغذية تحتوي على </string>
    <string name="level0String"> سعر حراري يومياً للحفاظ على وزنك كما هو في مستوى نشاط </string>
    <string name="home">الرئيسيه</string>
    <string name="tmareen">تمارين</string>
    <string name="so3raat">سعرات الوجبات</string>
    <string name="shay">الشاى</string>
    <string name="shmr">الشمر</string>
    <string name="qrfa">مشروب القرفه</string>
    <string name="qhoa5">مشروب القهوه الخضراء</string>
    <string name="nescafe">نسكافيه بلاك</string>
    <string name="qahoaB">قهوه بلاك</string>
    <string name="tilio">مشروب التيليو</string>
    <string name="yansoon">مشروب الينسون</string>
    <string name="n3n3">مشروب النعناع</string>
    <string name="zangabil">زنجبيل</string>
    <string name="shn3">شاى بالنعناع</string>
    <string name="qahoa">قهوه</string>
    <string name="safr">00 : 00 : 00</string>
    <string name="_16_8">16/8</string>
    <string name="_18_6">18/6</string>
    <string name="_20_4">20/4</string>
    <string name="go_to_info">ادخل الى التفاصيل</string>
    <string name="_16_8_info1">الصيام لمده 16 ساعه</string>
    <string name="_16_8_info2">فتره تناول الطعام 8 ساعات</string>
    <string name="_18_6_info1">الصيام لمده 18 ساعه</string>
    <string name="_18_6_info2">فتره تناول الطعام 6 ساعات</string>

    <string name="_20_4_info1">الصيام لمده 20 ساعه</string>
    <string name="_20_4_info2">فتره تناول الطعام 4 ساعات</string>
    <string name="hour">ساعه</string>
    <string name="sugg1">تناول ما يكفى من الاطعمه لتستطيع مداومه الصيام</string>
    <string name="sugg2">ننصحك بتناول الاطعمه الغنيه بالاياف مثل المكسرات والبقوليات والفواكه والخضراوات</string>
    <string name="sugg3">اشرب الكثير من الماء لتحافظ على يقظتك</string>
    <string name="sugg4">ابتعد عن السكريات على قدر المستطاع</string>
    <string name="stop">كسر الصيام</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab1">الصيام</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="startAlarm">منبه الصيام يعمل بالفعل</string>
    <string name="entercustomh">ادخل عدد الساعات</string>
    <string name="cutominfo">اضبط نظامك الشخصى لمتابعه الصيام المتقطع سيحتفظ التطبيق بقيمه الساعات التى تسجلها في حين رغبتك بتعديل عدد الساعات اضغط باستمرار هنا</string>
    <string name="hhh"> ساعه</string>
    <string name="hh2">نظامك الشخصى مضبوط على </string>
    <string name="thereareStarted">انت تتابع بالفعل صيامك</string>
    <string name="noti_info">امتنع عن الاكل حتى اشعار اخر ولا تنسى شرب المياه</string>
    <string name="noti_title">اشعار من تطبيق الصيام المتقطع</string>
    <string name="open">تطبيق متابعه الصيام المتقطع</string>
    <string name="openInfo">التطبيق سيعرض لكم فوائد الصيام المتقطع وكيفيه الاستفاده منها</string>
    <string name="skip">تخطى</string>
    <string name="enterage">ادخل عمرك</string>
    <string name="enterheight">ادخل طولك بالسنتيمتر</string>
    <string name="enterweight">ادخل وزنك بالكيلو</string>
    <string name="weighti">مع التطبيق هتقدر تفقد وزنك الزائد</string>
    <string name="weghtt">متابعه فقدك للوزن</string>
    <string name="so3ratS">سعرات الاطعمه</string>
    <string name="so3ratSi">تقدر تعرف سعرات اشهر الاطعمه من خلال تطبيقنا</string>
    <string name="seam">خطط الصيام</string>
    <string name="seami">تتوفر بعض خطط الصيام المفضله للمساعده على فقد الوزن</string>
    <string name="afterSyam">يمكنك تناول ما تشتهى فى وقت الفطور</string>
    <string name="afterSyamt">فتره الفطور</string>
    <string name="goal">هدف التطبيق</string>
    <string name="goall">وفق ما سبق يعمل التطبيق على حصولك على جسم صحى ونشيط</string>
    <string name="weeghhht">تستطيع فقد من 3 الى 8 بالمئه من وزنك ف الاسبوع</string>
    <string name="app_ads" translatable="false">ca-app-pub-7153023443357646~9343837825</string>
    <string name="adG" translatable="false">ca-app-pub-7153023443357646/6307926273</string>
    <string name="adG2" translatable="false">ca-app-pub-7153023443357646/2942043011</string>
    <string name="smlladg" translatable="false">ca-app-pub-7153023443357646/7419829401</string>
    <string name="inter" translatable="false">ca-app-pub-7153023443357646/8183402037</string>
    <string name="sefr">00 : 00 : 00</string>
    <string name="agee">عمرك</string>
    <string name="weightt">وزنك</string>
    <string name="height">طولك</string>
    <string name="so3rtitle">السعرات الواجب الحصول عليها خلال اليوم</string>
    <string name="effort">الجهد</string>
    <string name="sneed">يحتاج جسدك لـ </string>
    <string name="nowww">لابقاء جسدك كما هو عليه الان</string>
    <string name="sNeedd">يجب تقليل سعراتك الى</string>
    <string name="sneeeed">سعر حرارى يوميا</string>
    <string name="end">للحصول على جسد مثالى</string>
    <string name="genderr">النوع</string>
    <string name="save">حفظ</string>
    <string name="colCal">حساب السعرات الحراريه</string>
    <string name="back">استرجاع</string>
    <string name="calcaloD">حساب سعراتك اليوميه</string>
    <string name="ad_attribution">Ad</string>
    <string name="calcolInfo">اضغط على كل بطاقه لادخال بياناتك ثم اضغط على حساب السعرات يمكنك التراجع او حفظ بيانات عن طريق الزرين بالاسفل</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_activity_plan">PlanActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="enterDataa">ادخل القيم الاتيه لحساب سعراتك الحراريه</string>
    <string name="savee">حفظ البيانات الجديده؟</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="calll">احسب سعراتى</string>
    <string name="edit">تعديل</string>
    <string name="uSo3r">سعراتك :</string>
    <string name="uCallk">اضغط للحساب</string>
    <string name="UInfo">التفاصيل</string>
    <string name="weekPlans">الخطط الاسبوعيه</string>
    <string name="cancel">الغاء</string>
    <string name="editsytings">تم ضبط اعدادت تذكير الصيام</string>
    <string name="cancelEvent">ألغاء التنبيه</string>
    <string name="startEvent">ابدأ الصيام</string>
    <string name="sorry">نأسف لعدم روشه التصميم الاصدار تجريبى!</string>
    <string name="applyPlan">تطبيق الخطه</string>
    <string name="alreadyAply">انت الان بالفعل مشترك بخطه اسبوعيه</string>
    <string name="sat">السبت</string>
    <string name="satE">SAT</string>
    <string name="sun">الاحد</string>
    <string name="sune">SUN</string>
    <string name="mon">الاثنين</string>
    <string name="mone">MON</string>
    <string name="tue">الثلاثاء</string>
    <string name="tuee">TUE</string>
    <string name="wede">WED</string>
    <string name="wed">الاربعاء</string>
    <string name="thue">THU</string>
    <string name="thu">الخميس</string>
    <string name="frie">FRI</string>
    <string name="fri">الجمعه</string>
    <string name="weekly">خطه اسبوعيه</string>
    <string name="monthly">خطه شهريه</string>
    <string name="hourscheck">حدد ساعه تنبيهك لبدأ الصيام</string>
    <string name="selectPlan">اختر نوع الخطه</string>
    <string name="selectSPlan">حدد خطه الصيام التى تنوى بدأها</string>
    <string name="selectDays">حدد ايام التنبيه لبدأ الصيام</string>
    <string name="youDeleteWPlan">لقد قمت بالغاء خطه صيامك الاسبوعيه</string>
    <string name="caloris">السعرات</string>
    <string name="following">متابعه</string>
    <string name="details">بياناتك</string>
    <string name="syamDailyPlans">خطط الصيام اليوميه</string>
    <string name="custom_time">اختر مده الصيام</string>
    <string name="back_text">back</string>
    <string name="next_text">next</string>
    <string name="startLongPlan">بدأ خطه الصيام</string>
    <string name="enter_specifid_days">اختر ايام الصيام</string>
    <string name="enter_start_plan_time">اختر وقت التنبيه لبدأ الصيام</string>
    <string name="enter_plan_time">اختر عدد الساعات التى تنوى صيامها</string>
    <string name="finish_setup_lPlan">انتهيت</string>
    <string name="lngPDTitle">أنت تتابع بالفعل خطه صيام s%</string>
    <string name="deleteLngP">إلغاء خطتك</string>
    <string name="dismiss">ايقاف التنبيه</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="stopAlarm">ايقاف التنبيه</string>
    <string name="syam_finished">انتهت فتره الصيام ابدأ بتناول الطعام</string>
    <string name="finishSyamTitle">انتهى الصيام</string>
    <string name="finishSyamContent">تهانينا لقد انتهيت من الصيام الان</string>
    <string name="startLngPln">start plan</string>
    <string name="startLngPLnBody">start your plan</string>
    <string name="selectedDays">ايام الصيام</string>
    <string name="syamHours">ساعات الصيام</string>
    <string name="syamHoursBody1">الصيام</string>
    <string name="syamHoursBody2">ساعه يوميا</string>
    <string name="yourProgress">تقدمك</string>
    <string name="waterTitle">تنبيه شرب الماء</string>
    <string name="waterBody">تنبيه بشرب الماء الصحيه خلال فتره الصيام يساعد على حرق الدهون</string>
    <string name="confirm_chose_days">تأكد من اختيار ايام الصيام</string>

</resources>