<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardBg"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_8sdp"
            android:background="@drawable/circleb"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/so3rr" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginVertical="@dimen/_8sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/defult"
                android:gravity="center"
                android:text="@string/so3rtitle"
                android:textColor="@color/txtV"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/so3rVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/defult"
                android:gravity="center"
                android:textColor="@color/txtV" />
        </LinearLayout>

        <com.google.android.ads.nativetemplates.TemplateView
            android:id="@+id/my_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:visibility="gone"
            app:gnt_template_type="@layout/gnt_small_template_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:fontFamily="@font/defult"
            android:text="@string/savee"
            android:textColor="@color/txtV" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_7sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/yes"
                style="@style/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:fontFamily="@font/defult"
                android:text="@string/yes"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/_8sdp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/no"
                style="@style/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:fontFamily="@font/defult"
                android:text="@string/no"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</layout>